# imgui_game

./: .gitignore  CMakeLists.txt  README.md  callbacks.cpp  callbacks.h  imgui.ini  main.cpp  setup_linux.sh  setup_windows.cmd
.cache/clangd/index/: callbacks.cpp.CD6E28F42B9F34CC.idx  callbacks.h.8B7CE6A44E446FB3.idx  gl.c.77ACBDC224B2E389.idx  gl.h.1C06B8879B562A64.idx  imconfig.h.625FADE29D5AFBDE.idx  imgui.cpp.5433CCFBE43F9A60.idx  imgui.h.278CA2CDA8BDB370.idx  imgui_draw.cpp.2626248E324C0E7A.idx  imgui_freetype.cpp.4482427B00FC3A08.idx  imgui_freetype.h.83F9D86E188E340F.idx  imgui_impl_glfw.cpp.B6016D47934AA8B6.idx  imgui_impl_glfw.h.FCCD22FCA25904E3.idx  imgui_impl_opengl3.cpp.52E53866FABFA15C.idx  imgui_impl_opengl3.h.6ABC2DFB471BC566.idx  imgui_impl_opengl3_loader.h.FC5475C5BD6AC33C.idx  imgui_internal.h.5C276717A935276A.idx  imgui_tables.cpp.3F202F20FD3FBB7C.idx  imgui_widgets.cpp.CFCAA84DD704A635.idx  imstb_rectpack.h.5C8618CD574EC068.idx  imstb_textedit.h.195B8AC2D3FCB219.idx  khrplatform.h.76FD94418E4EB291.idx  main.cpp.BA0D37471E445281.idx
